--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>My Panda</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -60,8 +60,8 @@
               <div class="col-lg-7">
                 <h1>Mega LCD TV For Sports</h1>
                 <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
-                <div class="btn btn-primary">Buy Now</div>
                 <h1>$1200</h1>
+                <div class="btn btn-primary">Buy Now</div>
               </div>
               <div class="col-lg-5">
                 <img src="images/banner-images/tv1.png" class="d-block w-100" alt="...">
@@ -100,20 +100,20 @@
   <main>
     <section>
       <div class="container overflow-hidden text-center">
-        <div class="row gy-3">
-          <div class="col-lg-4">
+        <div class="row g-3">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="p-1 border bg-info rounded-4 d-flex align-items-center justify-content-around">
               <h2>Watch</h2>
               <img src="images/categories/watch.png" alt="">
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="p-1 border bg-primary rounded-4 d-flex align-items-center justify-content-around">
               <h2>Shoes</h2>
               <img src="images/categories/shoes.png" alt="">
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="p-1 border bg-success rounded-4 d-flex align-items-center justify-content-around">
               <h2>Bags</h2>
               <img src="images/categories/bag.png" alt="">
@@ -122,7 +122,105 @@
         </div>
       </div>
     </section>
+    <section class="container my-5">
+      <h3>Shoes</h3>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column justify-content-around align-items-start">
+              <h5 class="card-title">Supply 247</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+              <h4>$120</h4>
+              <div class="btn btn-primary">Buy Now >></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column justify-content-around align-items-start">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h4>$360</h4>
+              <div class="btn btn-primary">Buy Now >></div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column justify-content-around align-items-start">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+              <h4>$270</h4>
+              <div class="btn btn-primary">Buy Now >></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container my-5">
+      <h3>Backpacks</h3>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column justify-content-around align-items-start">
+              <h5 class="card-title">Red Laltu Bag</h5>
+              <h4>$120</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="btn btn-primary">Buy Now >></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column justify-content-around align-items-start">
+              <h5 class="card-title">Blue Niltu Bag</h5>
+              <h4>$150</h4>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <div class="btn btn-primary">Buy Now >></div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 border-0 shadow p-3 mb-5 bg-body">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column justify-content-around align-items-start">
+              <h5 class="card-title">Black Kaltu Bag</h5>
+              <h4>$170</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <div class="btn btn-primary">Buy Now >></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+  <footer>
+    <section class="container bg-warning bg-gradient bg-opacity-25">
+      <form action="" class="d-flex justify-content-center py-5 my-5">
+        <div class="mb-3 w-50">
+          <label for="exampleFormControlInput1" class="form-label">
+            <h3>LET'S STAY IN TOUCH</h3>
+            <p>Get updates on sales, specials and more</p>
+          </label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          <button class="btn btn-warning">Subscribe</button>
+        </div>
+        
+      </form>
+    </section>
+    <div class="d-flex justify-content-center align-content-center">
+      <p class="">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
